# ai-learnings

./: README.md  dates_normalization_raw_rnn.py  digit_recognition_nn.py  mini_gpt_transformer.py  pyproject.toml
data/DATES/: messy_dates_eval.csv  messy_dates_test.csv  messy_dates_train.csv
