[project]
name = "neutral-network-learnings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
